# project_46

./: .dockerignore  README.md
backend/: db.sqlite3  pyproject.toml
backend/application/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/application/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/properties/: page.tsx
frontend/src/lib/: api.ts
src/app/: page.tsx
src/app/login/: page.tsx
src/components/: HouseModel.tsx
